--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -21,11 +21,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:autoLink="all"
             android:gravity="center"
             android:lineSpacingExtra="12dp"
             android:text="@string/about"
             android:textColor="@android:color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:autoLink="web"
+            android:gravity="center"
+            android:layout_marginTop="12dp"
+            android:text="@string/github"
+            android:textColorLink="#05D23A31"
             android:textSize="15sp" />
     </LinearLayout>
 
