--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:elevation="2dp"
-        android:fitsSystemWindows="true"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/keyword"
             android:imeOptions="actionSearch"
-            android:hint="搜索歌曲/歌手"
-            android:layout_weight="1"
-            android:padding="5dp"
+            android:hint="搜索 歌曲/歌手/专辑"
+            android:textSize="15dp"
+            android:gravity="center"
+            android:paddingHorizontal="12dp"
             android:singleLine="true"
-            android:background="@android:color/white"
             android:layout_width="match_parent"
             android:layout_height="50dp" />
-        <Button
+<!--        <Button
             android:id="@+id/searchBtn"
             android:text="搜索"
             android:onClick="onClick"
             android:layout_weight="5"
             android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:layout_height="50dp" />-->
 <!--        <EditText
             android:textColor="@android:color/white"
             android:textSize="15dp"
@@ -39,9 +38,17 @@
     </LinearLayout>
 
     <ListView
+        android:layout_below="@id/topBar"
         android:id="@+id/searchList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@null" />
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/loadlist"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
+</RelativeLayout>
