--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,13 +52,13 @@
 
         <TextView
             android:id="@+id/search"
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_marginBottom="6dp"
             android:layout_marginHorizontal="6dp"
             android:background="#20000000"
             android:gravity="center"
+            android:onClick="onClick"
             android:text="搜索在线歌曲"
             android:textColor="#99FFFFFF"
             android:textSize="15sp" />
@@ -83,54 +83,54 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/group"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_below="@+id/topBar"
-            android:orientation="horizontal">
+    <!--        <LinearLayout
+                android:id="@+id/group"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_below="@+id/topBar"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/group_song"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:onClick="switchItem"
-                android:text="@string/group_1"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15sp" />
-            <!--            <TextView
-                            android:id="@+id/group_folder"
-                            android:onClick="switchItem"
-                            android:gravity="center"
-                            android:text="@string/group_2"
-                            android:textSize="15sp"
-                            android:textColor="@color/colorText"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
-                        <TextView
-                            android:id="@+id/group_cloud"
-                            android:onClick="switchItem"
-                            android:gravity="center"
-                            android:text="@string/group_3"
-                            android:textSize="15sp"
-                            android:textColor="@color/colorText"
-                            android:layout_weight="1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />-->
-            <TextView
-                android:id="@+id/group_history"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:onClick="switchItem"
-                android:text="@string/group_4"
-                android:textColor="@color/colorText"
-                android:textSize="15sp" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/group_song"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:onClick="switchItem"
+                    android:text="@string/group_1"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="15sp" />
+                &lt;!&ndash;            <TextView
+                                android:id="@+id/group_folder"
+                                android:onClick="switchItem"
+                                android:gravity="center"
+                                android:text="@string/group_2"
+                                android:textSize="15sp"
+                                android:textColor="@color/colorText"
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" />
+                            <TextView
+                                android:id="@+id/group_cloud"
+                                android:onClick="switchItem"
+                                android:gravity="center"
+                                android:text="@string/group_3"
+                                android:textSize="15sp"
+                                android:textColor="@color/colorText"
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" />&ndash;&gt;
+                <TextView
+                    android:id="@+id/group_history"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:onClick="switchItem"
+                    android:text="@string/group_4"
+                    android:textColor="@color/colorText"
+                    android:textSize="15sp" />
+            </LinearLayout>-->
 
     <!--    <LinearLayout
             android:layout_width="match_parent"
@@ -138,14 +138,22 @@
             android:layout_below="@+id/group"
             android:background="@color/colorLine" />-->
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/btmBar"
-            android:layout_below="@+id/group">
+    <!--        <android.support.v4.view.ViewPager
+                android:id="@+id/viewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/btmBar"
+                android:layout_below="@+id/group">
 
-        </android.support.v4.view.ViewPager>
+            </android.support.v4.view.ViewPager>-->
+
+    <ListView
+        android:id="@+id/musicList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/btmBar"
+        android:layout_below="@+id/topBar"
+        android:divider="@null" />
 
     <ImageView
         android:id="@+id/hunt"
