--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -33,6 +33,15 @@
         android:background="@mipmap/sound"
         android:visibility="gone" />
 
+    <ImageView
+        android:id="@+id/kugou"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginLeft="-15dp"
+        android:layout_marginTop="41dp"
+        android:background="@mipmap/kugou"
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
