--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -10,13 +10,22 @@
         android:layout_centerVertical="true"
         android:orientation="vertical">
 
-        <ImageView
+<!--        <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginBottom="12dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/xiu" />
+            android:src="@mipmap/xiu" />-->
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/album"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:src="@mipmap/xiu"
+            android:layout_marginBottom="12dp"/>
 
         <TextView
             android:layout_width="match_parent"
