--- a/app/src/main/res/layout/layout_list_item.xml
+++ b/app/src/main/res/layout/layout_list_item.xml
@@ -9,19 +9,13 @@
     android:paddingLeft="5dp">
 
     <TextView
-        android:id="@+id/_id"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="gone" />
-
-    <TextView
         android:id="@+id/musicNum"
         android:layout_width="40dp"
         android:layout_height="60dp"
         android:gravity="center"
         android:text="0"
         android:textColor="@color/list_num"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <ImageView
         android:id="@+id/playing"
@@ -38,9 +32,7 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_marginLeft="-15dp"
-        android:layout_marginTop="41dp"
-        android:background="@mipmap/kugou"
-        android:visibility="gone" />
+        android:layout_marginTop="41dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,6 +69,18 @@
                 android:text="李玉刚"
                 android:textColor="@color/list_artist"
                 android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/musicPath"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingRight="8dp"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:maxLines="1"
+                android:text="10.00M"
+                android:textColor="@color/list_artist"
+                android:textSize="12sp"/>
         </LinearLayout>
 
         <LinearLayout
