--- a/app/src/main/res/drawable/shape_album_radius.xml
+++ b/app/src/main/res/drawable/shape_album_radius.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="#50000000" android:width="5dp"/>
-    <corners android:radius="150dp"/>
+    <stroke
+        android:color="#50000000"
+        android:width="5dp" />
+    <corners android:radius="150dp" />
 </shape>
