--- a/app/src/main/res/layout/layout_time_dialog.xml
+++ b/app/src/main/res/layout/layout_time_dialog.xml
@@ -9,8 +9,7 @@
         android:timePickerMode="spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
-    </TimePicker>
+        android:layout_gravity="center"></TimePicker>
 
     <CheckBox
         android:id="@+id/timerCk"
