--- a/app/src/main/res/drawable/topbar_gradient.xml
+++ b/app/src/main/res/drawable/topbar_gradient.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:angle="90"
+    <gradient
+        android:angle="90"
         android:useLevel="true"
         android:startColor="#20000000"
-        android:endColor="#60000000"/>
+        android:endColor="#60000000" />
 </shape>
