--- a/app/src/main/res/layout/activity_permission.xml
+++ b/app/src/main/res/layout/activity_permission.xml
@@ -3,14 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/image"
+    <View android:id="@+id/image"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:adjustViewBounds="true"
         android:background="#88888888"
-        android:contentDescription="@null"/>
+        android:contentDescription="@null" />
 
 </LinearLayout>
