--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -25,14 +25,14 @@
 
         <EditText
             android:id="@+id/keyword"
-            android:imeOptions="actionSearch"
-            android:hint="歌曲/歌手/专辑"
-            android:textSize="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:gravity="center"
+            android:hint="歌曲/歌手/专辑"
+            android:imeOptions="actionSearch"
             android:paddingHorizontal="12dp"
             android:singleLine="true"
-            android:layout_width="match_parent"
-            android:layout_height="50dp" />
+            android:textSize="15dp" />
         <!--        <Button
                     android:id="@+id/searchBtn"
                     android:text="搜索"
@@ -48,11 +48,53 @@
                     android:layout_height="50dp" />-->
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/switchHttp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/topBar"
+        android:layout_marginTop="-10dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/local"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="搜本地"
+            android:textColor="@color/colorPrimary"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/kghttp"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="搜酷狗"
+            android:textColor="@color/colorText"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/qqhttp"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="搜Q音"
+            android:textColor="@color/colorText"
+            android:textSize="15dp" />
+    </LinearLayout>
+
     <ListView
         android:id="@+id/searchList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/topBar"
+        android:layout_below="@id/switchHttp"
         android:divider="@null" />
 
     <ProgressBar
