--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,7 +83,7 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <!--        <LinearLayout
+<!--            <LinearLayout
                 android:id="@+id/group"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -130,15 +130,15 @@
                     android:text="@string/group_4"
                     android:textColor="@color/colorText"
                     android:textSize="15sp" />
-            </LinearLayout>-->
+            </LinearLayout>
 
-    <!--    <LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_below="@+id/group"
-            android:background="@color/colorLine" />-->
+            android:background="@color/colorLine" />
 
-    <!--        <android.support.v4.view.ViewPager
+            <android.support.v4.view.ViewPager
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
