--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -20,13 +20,13 @@
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/album"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:src="@mipmap/xiu"
             android:layout_marginBottom="12dp" />
 
-        <TextView
+<!--        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -34,7 +34,7 @@
             android:lineSpacingExtra="12dp"
             android:text="@string/about"
             android:textColor="@android:color/black"
-            android:textSize="15sp" />
+            android:textSize="15sp" />-->
 
         <!--        <TextView
                     android:layout_width="match_parent"
