--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -37,7 +37,7 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
+            <com.xiu.customview.MarqueeTextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
