--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -90,12 +90,18 @@
             android:textSize="15dp" />
     </LinearLayout>
 
-    <ListView
+<!--    <ListView
         android:id="@+id/searchList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/switchHttp"
-        android:divider="@null" />
+        android:divider="@null" />-->
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/switchHttp" />
 
     <ProgressBar
         android:id="@+id/loadlist"
