add music visualizer and custom toast

--- a/app/src/main/res/layout/layout_lyric.xml
+++ b/app/src/main/res/layout/layout_lyric.xml
@@ -9,6 +9,7 @@
         android:id="@+id/lyricList"
         android:divider="@null"
         android:scrollbars="none"
+        android:layout_marginBottom="70dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
