--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -96,11 +96,19 @@
         android:background="@color/colorAlbumBg"
         android:paddingVertical="12dp">
 
+        <com.xiu.customview.CustomVisualizer
+            android:id="@+id/visualizer"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="-15dp"
+            android:layout_gravity="bottom"/>
+
         <LinearLayout
             android:id="@+id/albumParent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="center" >
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/album"
@@ -116,17 +124,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
-
-    <TextView
-        android:id="@+id/loading"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_above="@+id/btmBar"
-        android:gravity="center"
-        android:text="正在缓冲..."
-        android:textColor="@android:color/white"
-        android:textSize="12dp"
-        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="wrap_content"
