--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
     <item
+        android:id="@+id/nav_visualizer"
+        android:icon="@mipmap/ic_visualizer"
+        android:title="关闭可视化" />
+    <item
         android:id="@+id/nav_refresh"
         android:icon="@mipmap/nav_refresh"
         android:title="更新列表" />
