--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -96,13 +96,6 @@
         android:background="@color/colorAlbumBg"
         android:paddingVertical="12dp">
 
-        <com.xiu.customview.CustomVisualizer
-            android:id="@+id/visualizer"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginBottom="-15dp"
-            android:layout_gravity="bottom"/>
-
         <LinearLayout
             android:id="@+id/albumParent"
             android:layout_width="wrap_content"
@@ -112,6 +105,7 @@
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/album"
+                android:onClick="onClick"
                 android:layout_width="320dp"
                 android:layout_height="320dp"
                 android:src="@mipmap/album_default"
@@ -123,6 +117,14 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <com.xiu.customview.CustomVisualizer
+            android:id="@+id/visualizer"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="-15dp"
+            android:layout_gravity="bottom"/>
     </FrameLayout>
 
     <LinearLayout
